test/integration/bad/new/type-size-bad62.stan
data {
   complex_vector[foo
}
